complete :: responsive header and hero section for tablets

--- a/src/index.css
+++ b/src/index.css
@@ -25,11 +25,25 @@ html {
 body {
   font-family: "Lexend", sans-serif;
 }
-
+ul{
+  list-style: none;
+}
+a{
+  text-decoration: none;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 /* ========== RE-USABLE STYLES ========== */
 .container{
   max-width: 1150px;
 }
 .section-padding{
-  padding: 0 2rem;
+  padding: 2rem 3rem;
+}
+.grid{
+  display: grid;
+  place-items: center;
 }
