--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,237 @@
 /* ========== HEADER STYLES ========== */
-.header{
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 6rem;
+  width: 100%;
+  height: 100px;
+  background-color: #ffffff2c;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  overflow: hidden;
+}
+
+.header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: inherit;
+  backdrop-filter: blur(10px);
+  z-index: -1;
+}
+.header-logo-container {
+  width: 10%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+}
+.header-logo {
+  width: 5.625rem;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.nav {
+  width: 70%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+}
+.nav-list {
+  display: flex;
+  gap: 3rem;
+}
+.nav-list .nav-link {
+  color: #000;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.nav-list .nav-link:hover {
+  color: #47aa5b;
+}
+.header-button-container {
+  width: 20%;
+  display: grid;
+  place-items: center;
+}
+.header-purchase-btn {
+  background-color: var(--button-bg-color);
+  color: #fff;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  padding: 10px 15px;
+  border: none;
+  outline: none;
+  border-radius: 1rem;
+}
+.menu-icon {
+  display: none;
+}
+
+/* mobile nav */
+.mobile-nav-container {
+  display: none;
+}
+/* ========== hero section ========== */
+.hero-section-wrapper {
+  background-image: url("./assets/images/hero-bg.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+.hero-section-container {
+  /* background: linear-gradient(135deg, var(--hero-bg-15), var(--hero-bg-78)); */
+  height: 750px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.hero-text {
+  z-index: 100;
+  font-weight: bold;
+  font-size: 54px;
+  text-align: center;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.hero-text-up {
+  color: #fff;
+  z-index: 100;
+}
+.hero-text-down-1 {
+  color: #47aa5b;
+  z-index: 100;
+}
+.hero-text-down-2 {
+  color: #987300;
+  z-index: 100;
+}
+.sub-hero-text {
+  text-align: center;
+  color: #fff;
+  font-size: 22px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  margin-top: 1.5rem;
+  z-index: 100;
+}
+.hero-order-btn {
+  padding: 1rem 1.5rem;
+  border: none;
+  outline: none;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  background-color: var(--button-bg-color);
+  margin-top: 2rem;
+  font-size: 20px;
+  font-weight: 500;
+  color: #fff;
+  border-radius: 1.2rem;
+  cursor: pointer;
+  z-index: 100;
+}
+.hero-service {
+  margin-top: 1.5rem;
+  display: grid;
+  place-items: center;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 1rem;
+  z-index: 100;
+}
+.pickup {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 1rem;
+  text-align: center;
+  font-size: 20px;
+  color: #fff;
+  font-size: 14px;
+  z-index: 100;
+}
+.pickup-title {
+  font-weight: 500;
+  z-index: 100;
+}
+.pickup-img-container {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: #fff;
+  z-index: 100;
+}
+.pickup img {
+  width: 40px;
+}
+.leaf-img {
+  position: absolute;
+  height: 202px;
+  left: 0;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.hero-left-img {
+  position: absolute;
+  width: auto;
+  height: 700px;
+  top: 18%;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  z-index: 1;
+}
+.hero-right-img {
+  position: absolute;
+  right: 0;
+  top: 13%;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  z-index: 1;
+}
+
+/* for medium devices */
+@media screen and (max-width: 820px) {
+  .header {
+    padding: 0 3rem;
+  }
+  .nav {
+    display: none;
+  }
+
+  .header-purchase-btn {
+    display: none;
+  }
+  .menu-icon {
+    display: block;
+    font-size: 20px;
+    color: #000;
+    cursor: pointer;
+  }
+  .mobile-nav-container {
+    display: block;
+    position: absolute;
+    z-index: 9999;
+    height: 100%;
+    background-color: #fff;
+    width: 240px;
+    padding: 3rem;
+    left: -100%;
+    transition: left 0.4s;
+  }
+
+  .mobile-nav .mobile-nav-list .nav-element {
+    margin-bottom: 2rem;
+  }
+  .mobile-nav .mobile-nav-list .nav-element .nav-link {
+    color: #000;
+    font-size: 18px;
+    transition: color 0.4s;
+  }
+  .close-icon {
+    font-size: 20px;
+    position: absolute;
+    top: 10;
+    right: 10%;
+    cursor: pointer;
+  }
+  .show-nav {
+    left: 0;
+  }
 }
