--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@
 .nav-list .nav-link {
   color: #000;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  transition: color .4s;
 }
 .nav-list .nav-link:hover {
   color: #47aa5b;
