--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
 .nav-list .nav-link {
   color: #000;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  transition: color .4s;
+  transition: color 0.4s;
 }
 .nav-list .nav-link:hover {
   color: #47aa5b;
@@ -134,13 +134,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  column-gap: .5rem;
+  column-gap: 0.5rem;
 }
-.order-now-icon{
+.order-now-icon {
   height: 30px;
   width: 30px;
   border-radius: 50%;
-  background-color: #FEAC01;
+  background-color: #feac01;
 }
 .hero-service {
   margin-top: 1.5rem;
@@ -197,6 +197,94 @@
   z-index: 1;
 }
 
+
+/* ========== ABOUT SECTION STYLES */
+.about-section-title{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  font-size: 22px;
+  font-weight: 500;
+  column-gap: .5rem;
+  margin-bottom: 1.5rem;
+}
+.title-logo{
+  width: 46px;
+  height: 26.07px;
+}
+.title-part-1{
+  color: var(--section-title-first-color);
+}
+.title-part-2{
+  color: var(--section-title-second-color);
+}
+
+.about-text{
+  font-size: 44px;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+.about-img{
+  position: absolute;
+  right: 5%;
+  top: 52.75rem;
+  z-index: -1;
+}
+.about-text-bottom-1{
+  color: #3E7F51;
+}
+.about-text-bottom-2{
+  color: #FF5C00;
+}
+.about-sub-text{
+  font-size: 18px;
+  width: 58%;
+}
+.about-us-list{
+  margin-top: 2rem;
+  display: flex;
+  column-gap: 5rem;
+}
+.about-us-list ul li{
+  margin-bottom: 2rem;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 500;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.about-round{
+  background-image: url('./assets/images/about-circle.png');
+  height: 40px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 1rem;
+}
+.about-tick{
+  height: 34px;
+  width: 44px;
+
+}
+.about-btn{
+  background-color: var(--button-bg-color);
+  padding: .9rem 1rem;
+  outline: none;
+  border: none;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  color: #fff;
+  column-gap: .6rem;
+  cursor: pointer;
+}
+.about-btn-icon{
+  font-size: 20px;
+}
 /* for medium devices */
 @media screen and (max-width: 820px) {
   .header {
@@ -245,6 +333,15 @@
   .show-nav {
     left: 0;
   }
+  .about-section-container{
+    margin: 5rem 0;
+  }
+  .about-img{
+    display: none;
+  }
+  .about-sub-text{
+    width: 100%;
+  }
 }
 /* for small devices */
 @media screen and (max-width: 767px) {
@@ -272,5 +369,33 @@
   }
   .hero-right-img {
     display: none;
+  }
+  .section-padding{
+    padding: 2rem 1.5rem;
+  }
+  .about-text{
+    font-size: 22px;
+  }
+  .about-us-list{
+    display: block;
+  }
+  .about-us-list ul li{
+    font-size: 15px;
+  }
+  .about-round{
+    background-image: url('./assets/images/about-circle.png');
+    background-position: center;
+    background-size: cover;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 1rem;
+  }
+  .about-tick{
+    height: 34px;
+    width: 44px;
+  
   }
 }
