--- a/src/index.css
+++ b/src/index.css
@@ -41,9 +41,12 @@ img {
   max-width: 1150px;
 }
 .section-padding{
-  padding: 2rem 3rem;
+  padding: 3rem 4rem;
 }
 .grid{
   display: grid;
   place-items: center;
+}
+.drop-shadow{
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
