--- a/src/App.css
+++ b/src/App.css
@@ -285,6 +285,116 @@
 .about-btn-icon{
   font-size: 20px;
 }
+/* NEWS SECTION STYLES */
+.news-section-title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 22px;
+  font-weight: 500;
+}
+.news-sub-title{
+  font-size: 45px;
+  font-weight: bold;
+  margin: 1rem 0;
+  text-align: center;
+}
+.news-sub-title-part-1{
+  color: #3E7F51;
+}
+.news-sub-title-part-2{
+  background: linear-gradient(90deg, #3E7F51 40%, #6BAE78 45%, #FF8C33 55%, #FF5C00 60%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
+.news-sub-title-part-3{
+  color: #FF5C00;
+}
+.news-card-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1rem;
+  padding: 10px;
+}
+
+.news-card-container > div:nth-child(1) {
+  background-color: #f9f9f9;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.news-card-container > div:nth-child(2) {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto;
+  grid-gap: 1rem;
+}
+
+.news-card-container > div:nth-child(2) > div:nth-child(1) {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.news-card-container > div:nth-child(2) > div:nth-child(2) {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1rem;
+}
+
+.news-card-container > div:nth-child(2) > div:nth-child(2) > div {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+.news-card-container img{
+  width: 100%;
+}
+.card-body{
+  padding: 1rem;
+}
+.card-body p{
+  font-size: 22px;
+  font-weight: bold;
+}
+.news-user-date{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  column-gap: 1rem;
+  margin-bottom: 1rem;
+  font-size: 16px;
+}
+.news-user-date-1{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  column-gap: 1rem;
+  margin-bottom: 1rem;
+  font-size: 12px;
+}
+.news-user-date-2{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  column-gap: 1rem;
+  margin-bottom: 1rem;
+  font-size: 12px;
+}
+.news-user{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: .5rem;
+}
+.news-date{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: .5rem;
+}
+
+/* Responsive styles */
+
 /* for medium devices */
 @media screen and (max-width: 820px) {
   .header {
@@ -342,6 +452,49 @@
   .about-sub-text{
     width: 100%;
   }
+  .card-body{
+    padding: 1rem .5rem;
+  }
+  .card-body p{
+    font-size: 15px;
+    font-weight: bold;
+  }
+  .news-user-date{
+    font-size: 12px;
+  }
+  .news-user-date-1{
+    font-size: 8px;
+    column-gap: 4px;
+  }
+  .news-user-date-2{
+    font-size: 8px;
+    column-gap: 4px;
+  }
+}
+
+@media (max-width: 768px) {
+  .news-card-container {
+      grid-template-columns: 1fr;
+  }
+
+  .news-card-container > div:nth-child(2) {
+      grid-template-columns: 1fr;
+      grid-template-rows: auto auto;
+  }
+
+  .news-card-container > div:nth-child(2) > div:nth-child(2) {
+      grid-template-columns: 1fr;
+  }
+  .news-user-date-1{
+    font-size: 12px;
+    column-gap: 1rem;
+
+  }
+  .news-user-date-2{
+    font-size: 12px;
+    column-gap: 1rem;
+
+  }
 }
 /* for small devices */
 @media screen and (max-width: 767px) {
@@ -398,4 +551,11 @@
     width: 44px;
   
   }
+  .news-sub-title{
+    font-size: 23px;
+  }
+  .section-padding{
+    padding: 2rem 1rem;
+  }
+  
 }
