--- a/src/App.css
+++ b/src/App.css
@@ -415,9 +415,9 @@
   }
   .mobile-nav-container {
     display: block;
-    position: absolute;
+    position: fixed;
     z-index: 9999;
-    height: 100%;
+    height: 100vh;
     background-color: #fff;
     width: 240px;
     padding: 3rem;
@@ -523,9 +523,7 @@
   .hero-right-img {
     display: none;
   }
-  .section-padding{
-    padding: 2rem 1.5rem;
-  }
+  
   .about-text{
     font-size: 22px;
   }
