--- a/src/App.css
+++ b/src/App.css
@@ -395,8 +395,39 @@
   align-items: center;
   column-gap: .5rem;
 }
-
-/* Responsive styles */
+/* CHOOSE US SECTION STYLES */
+.choose-us-container{
+  background-color: #F5F7EB;
+}
+.choose-us-data{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.choose-us-text{
+  margin-bottom: 3rem;
+}
+.choose-us-list{
+  display: flex;
+  column-gap: 1.2rem;
+}
+.choose-us-list ul li{
+  background-color: #fff;
+  margin-bottom: 1rem;
+  border-radius: 10px;
+  padding: 1rem;
+  width: 100%;
+  height: 106px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.choose-us-list ul li div{
+  font-size: 22px;
+  font-weight: 500;
+  margin-bottom: .5rem;
+}
+.choose-us-list ul li p{
+  font-size: 16px;
+}
 
 /* for medium devices */
 @media screen and (max-width: 820px) {
@@ -472,6 +503,14 @@
   .news-user-date-2{
     font-size: 8px;
     column-gap: 4px;
+  }
+  .choose-us-data{
+    display: block;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .choose-img{
+    display: none;
   }
 }
 
@@ -557,6 +596,9 @@
   }
   .section-padding{
     padding: 2rem 1rem;
+  }
+  .choose-us-list{
+    display: block;
   }
   
 }
