--- a/src/App.css
+++ b/src/App.css
@@ -584,6 +584,38 @@
   padding: 2rem 0;
   text-align: center;
 }
+
+/* ========== TEAM MEMBER STYLES ========== */
+.member-data{
+  text-align: center;
+}
+.team-member-list{
+  display: grid;
+  place-items: center;
+  column-gap: 1.5rem;
+  row-gap: 3rem;
+  padding: 16px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
+.member-data{
+  background-color: #F5F7EB;
+  border-radius: 10px;
+  padding: 1rem;
+}
+.member-title{
+  font-size: 16px;
+}
+.member-name{
+  font-size: 20px;
+  font-weight: 500;
+  margin: .5rem 0;
+}
+.member-data ul{
+  display: flex;
+  column-gap: .6rem;
+  justify-content: center;
+  align-items: center;
+}
 /* for medium devices */
 @media screen and (max-width: 820px) {
   .header {
